# Bachelors_Projects

./: README.md
Arduino project/: LCD_brightness_script_serial.py  README.md
Arduino project/main/: main.ino
Arduino project/more_graphs_processing/: more_graphs_processing.pde
Assembly homeworks/Homework1/: Traccia.docx  homework1.asm
Assembly homeworks/Homework2/: esercizio.asm
Assembly homeworks/Homework3/: esercizio.asm
Assembly homeworks/Homework4/: leggi_albero.asm  main.asm  stampa_vettore.asm
Babelarity - Java project/resources/: README.txt
Bash and Awk homeworks/: 1.sh  2.sh  3.awk
C homeworks/1/: 1.c  Makefile
C homeworks/2/: 2.client.c  2.server.c  Makefile
C homeworks/3/: 3.c  Makefile
ROS homeworks/homework1/: orazio_wrapper.cpp  orazio_wrapper.h  orazio_wrapper_test.cpp
ROS homeworks/homework2/: CMakeLists.txt  draw_circle_client.cpp  draw_circle_server.cpp  tutorial_delete_circle.cpp
ROS homeworks/homework3/: mappa.yaml
ROS homeworks/homework5/: create_model.py  get_train_and_test.py  load_model.py
ROS homeworks/homework6/action_client/: CMakeLists.txt  action_client.cpp
Studstats - Java homework/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-search-index.js  type-search-index.js
Studstats - Java homework/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-2.html  index-3.html  index-4.html  (+5 more)
(+94 files in other folders)
